update intro text session

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey. Ho lets go</h2>
+						<h2>Introdução</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Todas estas questões, devidamente ponderadas, levantam dúvidas sobre se a determinação clara de objetivos talvez venha a ressaltar a relatividade do remanejamento dos quadros funcionais. Por outro lado, a necessidade de renovação processual deve passar por modificações independentemente das formas de ação. O incentivo ao avanço tecnológico, assim como a consolidação das estruturas exige a precisão e a definição do sistema de participação geral. No entanto, não podemos esquecer que o desenvolvimento contínuo de distintas formas de atuação auxilia a preparação e a composição do processo de comunicação como um todo. 
+					</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
