update what i do text session

--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>O que eu faço</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>A prática cotidiana prova que o desafiador cenário globalizado promove a alavancagem das condições inegavelmente apropriadas. Ainda assim, existem dúvidas a respeito de como a mobilidade dos capitais internacionais faz parte de um processo de gerenciamento das direções preferenciais no sentido do progresso.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
