--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>O que eu faço</h2>
+						<h2>O que eu</h2>
 					</header>
 					<p>A prática cotidiana prova que o desafiador cenário globalizado promove a alavancagem das condições inegavelmente apropriadas. Ainda assim, existem dúvidas a respeito de como a mobilidade dos capitais internacionais faz parte de um processo de gerenciamento das direções preferenciais no sentido do progresso.</p>
 				</div>
