--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<header>
 						<h2>Quem sou eu?</h2>
 					</header>
-					<p>Meu nome é Rafael e to testando</p>
+					<p>Meu nome é <strong>Rafael</strong> e to testando</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
